# attune

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  eval_rag.py  eval_rag_expanded.py  pyproject.toml
attune/: cache.py  cli.py  monitor.py  retrieval.py
attune/agent/: judge.py  prompts.py
attune/connectors/: calendar.py  gmail.py  mock.py
attune/models/: context.py  email.py
config/: goals.yaml
eval/: results.json  run_eval.py
